--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,28 @@ body {
 
 .page-top {
     box-shadow: 0 0 8px #bdbcbc80;
+    display: flex;
+    align-items: center;
+}
+
+.page-top-btn {
+    height: 34px;
+    background: #cccdce;
+    border: none;
+    color: #fffbfb;
+    margin-left: 18px;
+    cursor: pointer;
+    font-size: 18px;
+    width: 128px;
+    border-radius: 6px;
+}
+
+.page-top-btn:hover {
+    background: #8f999f;
+}
+
+.page-top-btn:focus {
+    outline: unset;
 }
 
 .page-body {
@@ -155,4 +177,16 @@ body {
 
 .face-info-name {
     margin-left: 12px;
+}
+
+#faceEditor {
+    display: none;
+
+    position: fixed;
+    top: calc(50% - 150px);
+    left: calc(50% - 250px);
+    background: white;
+    width: 500px;
+    height: 300px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
