--- a/templates/events.html
+++ b/templates/events.html
@@ -4,6 +4,7 @@
 	<title>Face Recognition</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 <body>
 	<div id="app" class="main">
@@ -34,7 +35,7 @@
 		</div>
 		<div id="page">
 			<div class="page-top">
-
+				<button type="button" class="page-top-btn" v-on:click="clearAll">Очистить</button>
 			</div>
 			<div class="page-body">
 				<div class="events-table">
@@ -58,6 +59,9 @@
 
 <script type="text/javascript" src="../static/vue.js"></script>
 <script type="text/javascript" src="../static/events.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
 </body>
 </html>
