--- a/templates/faces.html
+++ b/templates/faces.html
@@ -81,7 +81,7 @@
 								<div>[[ item.fathername ]]</div>
 							</div>
 						</div>
-						<a title="Удалить" class="face-info-delete" v-on:click="deleteFaceById([[ item.face_id ]])">Удалить</a>
+						<div title="Удалить" class="face-info-delete" v-on:click="deleteFaceById([[ item.face_id ]])">Удалить</div>
 					</div>
 				</div>
 			</div>
