--- a/static/style.css
+++ b/static/style.css
@@ -128,6 +128,28 @@ body {
     object-fit: cover;
 }
 
+.event-info-lastcolumn {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.event-info-delete {
+    text-align: right;
+    color: #ff5151;
+    cursor: pointer;
+    display: none;
+    font-size: 16px;
+}
+
+.event-info-delete:hover {
+    text-decoration-line: underline;
+}
+
+.event-info:hover .event-info-delete {
+    display: block;
+}
+
 .event-info-photo-container {
     overflow: hidden;
 }
